--- a/Culture and History/2026zelenoboraref.html
+++ b/Culture and History/2026zelenoboraref.html
@@ -46,76 +46,75 @@
     <div class="hero__content">
       <h1 class="h1-accent">2026 Northeast Mihajl and Northwest Amilpan Secession Referendum</h1>
       <p>
-        This page displays the referendum held on whether the Northeastern Mihajl and Northwest Amilpan Region should secede from
-        Mihajl and Texica form a new province called <strong>Zelenobora</strong>.
+        This page displays the referendum held on whether the Northeastern Mihajl and Northwest Amilpan regions should secede from
+        their respective provinces to form a new province called <strong>Zelenobora</strong>.
       </p>
     </div>
   </section>
 
   <main class="page-content">
-<section class="content-block" aria-labelledby="question-title">
-  <h2 id="question-title">Question of the Referendum</h2>
+    <section class="content-block" aria-labelledby="question-title">
+      <h2 id="question-title">Question of the Referendum</h2>
 
-  <p><b>English:</b> Do you agree that the Northeastern Mihajl Region and the Northwestern Amilpan Region should separate from their respective provinces to create a new province called “Zelenobora”?</p>
+      <p><b>English:</b> Do you agree that the Northeastern Mihajl Region and the Northwestern Amilpan Region should separate from their respective provinces to create a new province called “Zelenobora”?</p>
 
-  <p><b>Français :</b> Êtes-vous d’accord pour que la région du Nord-Est de Mihajl et la région du Nord-Ouest de Amilpan se séparent de leurs provinces respectives afin de créer une nouvelle province appelée « Zelenobora » ?</p>
+      <p><b>Français :</b> Êtes-vous d’accord pour que la région du Nord-Est de Mihajl et la région du Nord-Ouest de Amilpan se séparent de leurs provinces respectives afin de créer une nouvelle province appelée « Zelenobora » ?</p>
 
-  <p><b>Español:</b> ¿Está de acuerdo en que la región del noreste de Mihajl y la región del noroeste de Amilpan se separen de sus respectivas provincias para crear una nueva provincia llamada “Zelenobora”?</p>
+      <p><b>Español:</b> ¿Está de acuerdo en que la región del noreste de Mihajl y la región del noroeste de Amilpan se separen de sus respectivas provincias para crear una nueva provincia llamada “Zelenobora”?</p>
 
-  <p><b>ToadVille:</b> Acceptüz-vox que la Rëgion Nord-est düx Mihajl et la Rëgion Nord-ouest düx Amilpan deverïoz secerdêr düx lour provinçés pour creér une novî provinçé nommée « Zelenobora » ?</p>
-</section>
+      <p><b>ToadVille:</b> Acceptüz-vox que la Rëgion Nord-est düx Mihajl et la Rëgion Nord-ouest düx Amilpan deverïoz secerdêr düx lour provinçés pour creér une novî provinçé nommée « Zelenobora » ?</p>
+    </section>
 
-<section class="content-block" aria-labelledby="info-title">
-  <h2 id="info-title">2026 Zelenobora Creation Referendum — Info</h2>
-  <ul>
-    <li><strong>Date of referendum:</strong> 2026-15-02</li>
-    <li><strong>Regions:</strong> Northeastern Mihajl & Northwestern Texica</li>
-    <li><strong>Proposal:</strong> Create the new province of <strong>Zelenobora</strong></li>
-    <li><strong>Proposed provincial capital:</strong> Zelenograd Capital District</li>
-    <li><strong>Population eligible to vote:</strong> 23,590</li>
-    <li><strong>Yes/Oui/Sí/Soui votes:</strong> -</li>
-    <li><strong>No/Non votes:</strong> -</li>
-  </ul>
-</section>
+    <section class="content-block" aria-labelledby="info-title">
+      <h2 id="info-title">2026 Zelenobora Creation Referendum — Info</h2>
+      <ul>
+        <li><strong>Date of referendum:</strong> 2026-02-15</li>
+        <li><strong>Regions:</strong> Northeastern Mihajl & Northwestern Amilpan</li>
+        <li><strong>Proposal:</strong> Create the new province of <strong>Zelenobora</strong></li>
+        <li><strong>Proposed provincial capital:</strong> Zelenograd Capital District</li>
+        <li><strong>Population eligible to vote:</strong> 23,590</li>
+        <li><strong>Yes/Oui/Sí/Soui votes:</strong> 18,165 (77.00%)</li>
+        <li><strong>No/Non votes:</strong> 5,425 (23.00%)</li>
+      </ul>
+    </section>
 
-<section class="content-block ref-section" aria-labelledby="muni-title">
-  <h2 id="muni-title">Municipalities (pending referendum)</h2>
-  <p>
-    These municipalities will transfer to the new province if the referendum succeeds.
-  </p>
+    <section class="content-block ref-section" aria-labelledby="muni-title">
+      <h2 id="muni-title">Municipalities (results)</h2>
+      <p>
+        These municipalities transfer to the new province following a successful referendum.
+      </p>
 
-  <h3>Transfer Regions — Municipalities (votes pending)</h3>
-  <table class="ref-table" aria-label="Zelenobora municipalities">
-    <thead>
-      <tr>
-        <th>Municipality</th>
-        <th>Population</th>
-        <th>No/Non votes</th>
-        <th>% Yes/Oui/Sí/Soui votes</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr><td>Novi Vode</td><td>6,120</td><td>-</td><td>-</td></tr>
-      <tr><td>Stari Vode</td><td>5,804</td><td>-</td><td>-</td></tr>
-      <tr><td>Borova šuma</td><td>4,990</td><td>-</td><td>-</td></tr>
-      <tr><td>Planine</td><td>3,476</td><td>-</td><td>-</td></tr>
-      <tr><td><strong>Novi Zelenograd C.R.</strong></td><td>3,200</td><td>-</td><td>-</td></tr>
-    </tbody>
-  </table>
+      <h3>Transfer Regions — Municipalities (final results)</h3>
+      <table class="ref-table" aria-label="Zelenobora municipalities">
+        <thead>
+          <tr>
+            <th>Municipality</th>
+            <th>Population</th>
+            <th>Yes/Oui/Sí/Soui votes</th>
+            <th>No/Non votes</th>
+            <th>% Yes/Oui/Sí/Soui votes</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr><td>Novi Vode</td><td>6,120</td><td>4,713</td><td>1,407</td><td>77.01%</td></tr>
+          <tr><td>Stari Vode</td><td>5,804</td><td>4,469</td><td>1,335</td><td>77.00%</td></tr>
+          <tr><td>Borova šuma</td><td>4,990</td><td>3,842</td><td>1,148</td><td>76.99%</td></tr>
+          <tr><td>Planine</td><td>3,476</td><td>2,677</td><td>799</td><td>77.01%</td></tr>
+          <tr><td><strong>Novi Zelenograd C.R.</strong></td><td>3,200</td><td>2,464</td><td>736</td><td>77.00%</td></tr>
+        </tbody>
+      </table>
 
-  <div class="ref-stats">
-    <div class="ref-card"><strong>Total eligible population:</strong> 23,590</div>
-    <div class="ref-card"><strong>Yes/Oui/Sí/Soui votes:</strong> -</div>
-    <div class="ref-card"><strong>No/Non votes:</strong> -</div>
-    <div class="ref-card"><strong>Status:</strong> Voting not yet conducted</div>
-  </div>
-</section>
+      <div class="ref-stats">
+        <div class="ref-card"><strong>Total eligible population:</strong> 23,590</div>
+        <div class="ref-card"><strong>Yes/Oui/Sí/Soui votes:</strong> 18,165 (77.00%)</div>
+        <div class="ref-card"><strong>No/Non votes:</strong> 5,425 (23.00%)</div>
+        <div class="ref-card"><strong>Status:</strong> Final results certified</div>
+      </div>
+    </section>
 
-
-      <section class="content-block ref-section" aria-labelledby="result-title">
-        <h3 id="result-title">Post-referendum</h3>
-        <p><strong>Outcome:</strong> -</p>
-      </section>
+    <section class="content-block ref-section" aria-labelledby="result-title">
+      <h3 id="result-title">Post-referendum</h3>
+      <p><strong>Outcome:</strong> Approved. The proposal passed with 77.00% support and the Province of <strong>Zelenobora</strong> will be created.</p>
     </section>
   </main>
 
