--- a/operations.html
+++ b/operations.html
@@ -178,9 +178,18 @@
       <h3>We currently have localised to the following countries</h3>
       <ul class="country-list">
         <li>🇨🇦 Canada</li>
-        <li>🇷🇸 Mexico</li>
+        <li>🇲🇽 Mexico</li>
         <li>🇷🇸 Serbia</li>
-        <li>🇮🇪 United Kingdom</li>
+        <li>🇬🇧 United Kingdom</li>
+        <li>🇷🇸 Serbia</li>
+      </ul>
+    </div>
+
+    <h2>Partial Support</h2>
+
+    <div class="highlight-box">
+      <h3>While we currently have operations the following countries, they are not fully localised.</h3>
+      <ul class="country-list">
         <li>🇮🇪 Ireland</li>
       </ul>
     </div>
@@ -232,6 +241,7 @@
         <li>Russia</li>
         <li>Palestine</li>
         <li>Pakistan</li>
+        <li>United States of America (refer to TBExit27)</li> 
         <li>Iran</li>
         <li>North Korea</li>
         <li>Venezuela</li>
