--- a/Citizenship/citizenship.html
+++ b/Citizenship/citizenship.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>ToadVille Bay – Citizenship</title>
-  <meta content="ToadVille Bay – Citizenship Services" property="og:title" />
-  <meta content="Apply for citizenship, tests and ceremonies, and proof of status in ToadVille Bay." property="og:description" />
+  <title>Citizenship - Republic of ToadVille Bay (Canada)</title>
+  <meta content="Citizenship - Republic of ToadVille Bay (Canada)" property="og:title" />
+  <meta content="Get more information about citizenship services.." property="og:description" />
   <meta content="https://toadvillebay.com/Citizenship/citizenship.html" property="og:url" />
   <meta content="https://toadvillebay.com/Images and Videos/ToadVilleCOA.png" property="og:image" />
   <meta content="#0066CC" data-react-helmet="true" name="theme-color" />
@@ -51,6 +51,10 @@
         <a class="card" href="./ceremony.html" aria-label="Citizenship ceremony">
           <h3>Citizenship Ceremony</h3>
           <p>What to expect at your citizenship ceremony.</p>
+        </a>
+        <a class="card" href="./ordinary-passport" aria-label="Apply for an Ordinary Passpory">
+          <h3>Apply for a Passport (Ordinary)</h3>
+          <p>Apply to get your ToadVille Bay passport and travel internationally.</p>
         </a>
       </div>
     </section>
