--- a/Citizenship/ordinary-passport.html
+++ b/Citizenship/ordinary-passport.html
@@ -101,7 +101,7 @@
         <div class="pr-card-preview">
           <img src="../Images and Videos/ToadVille Bay Ordinary Passport.png" alt="Ordinary Passport" />
         </div>
-        <div class="pr-card-label">Ordinary Passport/div>
+        <div class="pr-card-label">Ordinary Passport</div>
       </div>
 
     </div>
