--- a/Citizenship/citizenship.html
+++ b/Citizenship/citizenship.html
@@ -52,9 +52,9 @@
           <h3>Citizenship Ceremony</h3>
           <p>What to expect at your citizenship ceremony.</p>
         </a>
-        <a class="card" href="./ordinary-passport" aria-label="Apply for an Ordinary Passpory">
-          <h3>Apply for a Passport (Ordinary)</h3>
-          <p>Apply to get your ToadVille Bay passport and travel internationally.</p>
+        <a class="card" href="./passports.html" aria-label="Service Passport">
+          <h3>Passport Services</h3>
+          <p>Apply to get your ToadVille Bay passport and travel internationally or find information on what each passport are for.</p>
         </a>
       </div>
     </section>
