--- a/operations.html
+++ b/operations.html
@@ -179,7 +179,7 @@
       <ul class="country-list">
         <li>🇨🇦 Canada</li>
         <li>🇲🇽 Mexico</li>
-        <li>🇷🇸 Serbia</li>
+        <li>🇸🇦 Saudi Arabia</li>
         <li>🇬🇧 United Kingdom</li>
         <li>🇷🇸 Serbia</li>
       </ul>
