--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
       <footer class="landing-footer">
         <div class="landing-copyright">
-          © ToadVille Bay du Canada 2019–<span id="current-year"></span>
+          © ToadVille Bay Ltd 2019–<span id="current-year"></span>
         </div>
       </footer>
     </main>
