--- a/Culture and History/1964reftex.html
+++ b/Culture and History/1964reftex.html
@@ -1,10 +1,10 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>1964 Texica Independence Referendum - Republic of ToadVille Bay (Canada)</title>
-  <meta content="1964 Texica Independence Referendum - Republic of ToadVille Bay (Canada)" property="og:title" />
+  <title>1964 Texica Province Independence Referendum - Republic of ToadVille Bay (Canada)</title>
+  <meta content="1964 Texica Province Independence Referendum" property="og:title" />
   <meta content="Official reference page for the 1960 Texica Province Independence Referendum and results." property="og:description" />
   <meta content="https://toadvillebay.com/1960texica.html" property="og:url" />
   <meta content="https://toadvillebay.com/Images and Videos/flag.png" property="og:image" />
@@ -53,16 +53,16 @@
     <section class="content-block" aria-labelledby="question-title">
       <h2 id="question-title">Question of the Referendum</h2>
       <p><b>English:</b> Do you agree that Texica should become sovereign after recent polls showing the desire for self governance?</p>
-      <p><b>EspaÃ±ol:</b> Â¿EstÃ¡ de acuerdo en que Texica deberÃ­a volverse soberana tras recientes encuestas que muestran el deseo de autogobernarse?</p>
-      <p><b>FranÃ§ais:</b> Acceptez-vous que Texica devienne souveraine aprÃ¨s de rÃ©cents sondages montrant un dÃ©sir dâ€™autogouvernance ?</p>
-      <p><b>ToadVille:</b> Â¿ AcceptÃ¼z-vox qou Texica deberÃ¯oz soverenÃ¯skio Ã»egt pÃ¶llis regremento setrÃ¯ l'desroix gÃ¼pe govbierno-selfex ?</p>
+      <p><b>Español:</b> ¿Está de acuerdo en que Texica debería volverse soberana tras recientes encuestas que muestran el deseo de autogobernarse?</p>
+      <p><b>Français:</b> Acceptez-vous que Texica devienne souveraine après de récents sondages montrant un désir d’autogouvernance ?</p>
+      <p><b>ToadVille:</b> ¿ Acceptüz-vox qou Texica deberïoz soverenïskio ûegt pöllis regremento setrï l'desroix güpe govbierno-selfex ?</p>
     </section>
 
     <section class="content-block" aria-labelledby="info-title">
-      <h2 id="info-title">1960 Texica Province Independence Referendum â€” Info & Results</h2>
+      <h2 id="info-title">1960 Texica Province Independence Referendum — Info & Results</h2>
       <ul>
         <li><strong>Date of referendum:</strong> 1964-08-12</li>
-        <li><strong>Province:</strong> Texica â€” Yes/Oui/Si/Soui 98%</li>
+        <li><strong>Province:</strong> Texica — Yes/Oui/Si/Soui 98%</li>
         <li><strong>Population vote (total counted):</strong> 1,234,567</li>
         <li><strong>No/Non votes:</strong> 24,691</li>
       </ul>
@@ -72,7 +72,7 @@
       <h2 id="muni-title">Municipalities in Texica Province (with results)</h2>
       <p>The municipal populations below are example figures. Total No/Non votes shown across municipalities: 24,691.</p>
 
-      <h3>Texica â€” Province result: Yes/Oui/Si/Soui 98% (15 municipalities)</h3>
+      <h3>Texica — Province result: Yes/Oui/Si/Soui 98% (15 municipalities)</h3>
       <table class="ref-table" aria-label="Texica municipalities">
         <thead>
           <tr><th>Municipality</th><th>Population</th><th>No/Non votes</th><th>% Yes/Oui/Si/Soui votes</th></tr>
@@ -143,15 +143,11 @@
           </ul>
         </div>
         <div class="site-footer-brand" style="grid-column: 1 / -1; text-align:center;">
-          <span class="site-footer-text">Â© ToadVille Bay du Canada 2019â€“2026</span>
+          <span class="site-footer-text">© ToadVille Bay du Canada 2019–2026</span>
         </div>
       </div>
     </div>
   </footer>
-  <script src="../scripts/footer.js"></script>
   <script src="../scripts/site-search.js"></script>
 </body>
 </html>
-
-
-
